# InTiCV

./: LICENSE-CC-BY-NC-ND-4.0.md  README.md  pyproject.toml
PART1 - RNN Extruder Models/: Evals_&_plots.ipynb  GRU_Script.ipynb  LSTM_Script.ipynb  TimeseriesSequence.py  utils.py
PART1 - RNN Extruder Models/db/: LSTM_splited_df.csv
PART1 - RNN Extruder Models/saved_models/: best_gru_model.keras  best_lstm_model.keras
PART1 - RNN Extruder Models/simulations/: GRU_predictions.csv  LSTM_predictions.csv
PART1 - RNN Extruder Models/training_hists/: GRU_FC_history.csv  LSTM_FC_history.csv
PART2- Image Scoring/: Evals_&_Plots.ipynb  Multi_Modal_Data_gen.ipynb  Semi_Supervised_CV_scoring.ipynb  Unsupervised_CV_scoring.ipynb  utils.py
PART2- Image Scoring/data/Extrusion/: Extruder_data_seconds.csv
PART2- Image Scoring/data/Scores/: All_CV_scores.csv  Final-product-scores.csv  Semi_Supervised_CV_scores_evals.csv  Time-based-scores.csv  Unsupervised_CV_scores.csv  xgb_scores.csv
PART3 - Multimodal/: Evals_&_Plots.ipynb  Multimodal_Training.ipynb  utils.py
PART3 - Multimodal/Simulations/: Multi-modal-gbm-g.csv  Multi-modal-xgb-g.csv
PART3 - Multimodal/data/: multimodal_data.csv
